Add j24 + some gnarly switch tests