@@ -52,6 +52,7 @@
 		<path.source_14>src</path.source_14>
 		<path.source_16>src</path.source_16>
 		<path.source_21>src</path.source_21>
+		<path.source_22>src</path.source_22>
 		<path.source_24>src</path.source_24>
 		<path.source_25>src</path.source_25>
     </properties>
@@ -223,6 +224,24 @@
 			</properties>
 		</profile>
 		<profile>
+			<id>java_22</id>
+			<properties>
+				<langver>22</langver>
+				<path.javac>${JAVA_22_HOME}/bin/javac</path.javac>
+				<path.source_6>src_6</path.source_6>
+				<path.source_8>src_8</path.source_8>
+				<path.source_9>src_9</path.source_9>
+				<path.source_10>src_10</path.source_10>
+				<path.source_12>src_12</path.source_12>
+				<path.source_14>src_14</path.source_14>
+				<path.source_16>src_16</path.source_16>
+				<path.source_21>src_21</path.source_21>
+				<path.source_22>src_22</path.source_22>
+				<path.target>output/java_22</path.target>
+				<javac.arguments>--enable-preview</javac.arguments>
+			</properties>
+		</profile>
+		<profile>
 			<id>java_24</id>
 			<properties>
 				<langver>24</langver>
@@ -235,6 +254,7 @@
 				<path.source_14>src_14</path.source_14>
 				<path.source_16>src_16</path.source_16>
 				<path.source_21>src_21</path.source_21>
+				<path.source_22>src_22</path.source_22>
 				<path.source_24>src_24</path.source_24>
 				<path.target>output/java_24</path.target>
 				<javac.arguments>--enable-preview</javac.arguments>
@@ -253,6 +273,7 @@
 				<path.source_14>src_14</path.source_14>
 				<path.source_16>src_16</path.source_16>
 				<path.source_21>src_21</path.source_21>
+				<path.source_22>src_22</path.source_22>
 				<path.source_24>src_24</path.source_24>
 				<path.source_25>src_25</path.source_25>
 				<path.target>output/java_25</path.target>
@@ -312,6 +333,7 @@
 							<source>${path.source_14}</source>
 							<source>${path.source_16}</source>
 							<source>${path.source_21}</source>
+							<source>${path.source_22}</source>
 							<source>${path.source_24}</source>
 							<source>${path.source_25}</source>
 						</sources>
